[workspace]
resolver = "2"
members = [
    "foundation/token",
    "foundation/metadata",
    "foundation/gax",
    "foundation/longrunning",
    "foundation/auth",
    "googleapis",
    "scheduler",
    "spanner",
    "pubsub",
    "storage",
    "bigquery",
    "spanner-derive",
    "artifact-registry",
    "kms"
]
